; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_resource_tracker.c_move_all_busy.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx4/extr_resource_tracker.c_move_all_busy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx4_dev = type { i32 }

@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mlx4_dev*, i32, i32)* @move_all_busy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @move_all_busy(%struct.mlx4_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.mlx4_dev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.mlx4_dev* %0, %struct.mlx4_dev** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i64, i64* @jiffies, align 8
  store i64 %9, i64* %7, align 8
  br label %10

10:                                               ; preds = %30, %3
  %11 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* %6, align 4
  %14 = call i32 @_move_all_busy(%struct.mlx4_dev* %11, i32 %12, i32 %13, i32 0)
  store i32 %14, i32* %8, align 4
  %15 = load i64, i64* @jiffies, align 8
  %16 = load i64, i64* %7, align 8
  %17 = load i32, i32* @HZ, align 4
  %18 = mul nsw i32 5, %17
  %19 = sext i32 %18 to i64
  %20 = add i64 %16, %19
  %21 = call i64 @time_after(i64 %15, i64 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %10
  br label %33

24:                                               ; preds = %10
  %25 = load i32, i32* %8, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %24
  %28 = call i32 (...) @cond_resched()
  br label %29

29:                                               ; preds = %27, %24
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %8, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %10, label %33

33:                                               ; preds = %30, %23
  %34 = load i32, i32* %8, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %41

36:                                               ; preds = %33
  %37 = load %struct.mlx4_dev*, %struct.mlx4_dev** %4, align 8
  %38 = load i32, i32* %5, align 4
  %39 = load i32, i32* %6, align 4
  %40 = call i32 @_move_all_busy(%struct.mlx4_dev* %37, i32 %38, i32 %39, i32 1)
  store i32 %40, i32* %8, align 4
  br label %41

41:                                               ; preds = %36, %33
  %42 = load i32, i32* %8, align 4
  ret i32 %42
}

declare dso_local i32 @_move_all_busy(%struct.mlx4_dev*, i32, i32, i32) #1

declare dso_local i64 @time_after(i64, i64) #1

declare dso_local i32 @cond_resched(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
